# practice-makes-perfect

./: .env.example  .gitignore  Dockerfile  docker-compose.yml  pyproject.toml
accounts/: admin.py  context_processors.py  forms.py  models.py  urls.py  utils.py  views.py
accounts/migrations/: 0001_initial.py  0002_instrument_add_fk.py  0003_populate_instruments.py  0004_finalize_instrument_fk.py  0005_fix_brass_midi_low.py  0006_profile_scale_weights.py
articulation/: admin.py  apps.py  models.py  urls.py  utils.py  views.py
articulation/migrations/: 0001_initial.py
config/: middleware.py  urls.py
config/settings/: base.py  prod.py
longtones/: admin.py  apps.py  models.py  urls.py  utils.py  views.py
longtones/migrations/: 0001_initial.py
nginx/: default.conf
omr/: admin.py  apps.py  models.py  service.py  urls.py  views.py
omr/migrations/: 0001_initial.py
omr/providers/: base.py  claude_vision.py  manual.py
pieces/: admin.py  apps.py  forms.py  models.py  urls.py  views.py
pieces/migrations/: 0001_initial.py  0002_practicelog_achieved_tempo.py  0003_piece_profile.py  0004_piece_profile_data.py  0005_trickybit_key_signature.py
planner/: admin.py  context_processors.py  models.py  urls.py  views.py
planner/migrations/: 0001_initial.py
practice/: algorithm.py  urls.py  views.py
scales/: admin.py  apps.py  catalog.py  models.py  urls.py  views.py
scales/migrations/: 0001_initial.py  0002_seed_catalog.py  0003_seed_ameb_types.py  (+2 more)
templates/: base.html  dashboard.html
tests/: conftest.py  factories.py
transitions/: admin.py  apps.py  models.py  urls.py  utils.py  views.py
(+64 files in other folders)
